post: troubleshoot-3-full-gc [auto]